# omnidrones_depth

./: README.md
cfg/task/: Forest.yaml  ForestDepth.yaml
docs/source/: installation.rst  troubleshooting.md
examples/: demo_downwash.py  demo_task.py
omni_drones/: __init__.py
omni_drones/envs/: isaac_env.py
omni_drones/envs/inv_pendulum/: inv_pendulum_fly_through.py  inv_pendulum_track.py
omni_drones/envs/payload/: payload_fly_through.py  payload_hover.py  payload_track.py
omni_drones/envs/platform/: platform_track.py
omni_drones/envs/single/: __init__.py  forest.py  forest_depth.py  track.py  track_devel.py
omni_drones/envs/transport/: transport_track.py
omni_drones/envs/utils/: simple_raycaster.py
omni_drones/robots/drone/: multirotor.py
omni_drones/sensors/: __init__.py  depth_camera.py  depth_camera_cfg.py  raycaster_depth.py
omni_drones/utils/: wandb.py
scripts/: play_depth.py  train_depth.py  train_depth.yaml  train_lidar.py
simple-raycaster/: LICENSE  pyproject.toml  readme.md
simple-raycaster/scripts/: advanced.py  example.py
simple-raycaster/src/simple_raycaster/: __init__.py  helpers.py  kernels.py  raycaster.py  utils_mjc.py  utils_usd.py
